Added normalize.css and application.css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <title></title>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous">
-  </script>
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/global.css">
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/6.0.0/normalize.css">
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
   <meta charset="utf-8">
 </head>
 <body>
-  <nav>
+
+  <nav id="navbar">
     <img src="">
     <ul>
       <li>À propos</li>
@@ -18,24 +19,33 @@
       <li>Contact</li>
     </ul>
   </nav>
-  <section>
+
+  <section id="home" class="full-height">
     <div>Arrow goes here</div>
   </section>
-  <section>
+
+  <section id="about" class="full-height">
     <div class="section-anchor"></div>
-    <h1>Section title goes here</h1>
+    <h1>À propos</h1>
   </section>
-  <section>
+
+  <section id="projects-intro" class="full-height">
     <div class="section-anchor"></div>
-    <h1>Section title goes here</h1>
+    <h1>Travaux</h1>
   </section>
-  <section>
+
+  <section id="projects">
+    <section id="perso-projects">
+      <h1>Travaux personnels</h1>
+    </section>
+    <section id="collab-projects">
+      <h1>Travaux collaboratifs</h1>
+    </section>
+  </section>
+
+  <footer id="footer" class="full-height">
     <div class="section-anchor"></div>
-    <h1>Section title goes here</h1>
-  </section>
-  <section>
-    <div class="section-anchor"></div>
-    <h1>Section title goes here</h1>
-  </section>
+    <h1>Contact</h1>
+  </footer>
 </body>
 </html>
