Added projects view

--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
     </section>
     <section id="collab-projects">
       <h1>Travaux collaboratifs</h1>
+
+      <div class="section-content">
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <div class="project-thumb"></div>
+          <div class="project-caption">Caption goes here</div>
+        </div>
+      </div>
+
     </section>
   </section>
 
