--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 <body>
 
   <section id="home" class="full-height">
-    <div>Arrow goes here</div>
+    <div class="section-content">
+      <div>Arrow goes here</div>
+    </div>
   </section>
 
   <section id="about" class="full-height grey">
     <div class="section-anchor"></div>
+    <div class="section-content">
+      <h1>À propos</h1>
+    </div>
 
     <nav id="navbar">
       <img src="./assets/images/layout/logo_text.png">
@@ -26,49 +31,52 @@
         <li>Contact</li>
       </ul>
     </nav>
-
-    <h1>À propos</h1>
   </section>
 
   <section id="projects-intro" class="full-height">
     <div class="section-anchor"></div>
-    <h1>Travaux</h1>
+    <div class="section-content">
+      <h1>Travaux</h1>
+    </div>
   </section>
 
   <section id="projects" class="grey">
     <section id="perso-projects">
-      <h1>Travaux personnels</h1>
+      <div class="section-content">
+        <h1>Travaux personnels</h1>
+      </div>
     </section>
     <section id="collab-projects">
-      <h1>Travaux collaboratifs</h1>
-
       <div class="section-content">
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
-        </div>
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
-        </div>
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
-        </div>
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
-        </div>
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
-        </div>
-        <div class="project-container">
-          <div class="project-thumb"></div>
-          <div class="project-caption">Caption goes here</div>
+        <h1>Travaux collaboratifs</h1>
+
+        <div class="project-container-global">
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
+          <div class="project-container">
+            <div class="project-thumb"></div>
+            <div class="project-caption">Caption goes here</div>
+          </div>
         </div>
       </div>
-
     </section>
   </section>
 
