--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
   <meta charset="utf-8">
+  <script type="text/javascript" src="./assets/javascripts/projects.js"></script>
 </head>
 <body>
 
@@ -54,6 +55,14 @@
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
+
+            <div class="lightbox">
+              <button class="lightbox-close">Back</button>
+              <button class="lightbox-previous">Previous</button>
+              <button class="lightbox-next">Next</button>
+
+              
+            </div>
           </div>
           <div class="project-container">
             <div class="project-thumb"></div>
