--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <body>
 
   <section id="home" class="full-height">
-    <div class="section-content">
-      <div>Arrow goes here</div>
-    </div>
+    <img class="logo" src="./assets/images/home/logo_text.png">
+    <img class="arrow" src="./assets/images/layout/arrowdown.png">
   </section>
 
   <section id="about" class="full-height grey">
@@ -43,13 +42,10 @@
 
   <section id="projects" class="grey">
     <section id="perso-projects">
-      <div class="section-content">
-        <h1>Travaux personnels</h1>
-      </div>
     </section>
     <section id="collab-projects">
       <div class="section-content">
-        <h1>Travaux collaboratifs</h1>
+        <h1>Projets</h1>
 
         <div class="project-container-global">
           <div class="project-container">
