Added galery layout

--- a/index.html
+++ b/index.html
@@ -57,30 +57,40 @@
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
 
-            <div class="lightbox">
-              <button class="lightbox-close">Back</button>
-              <button class="lightbox-previous">Previous</button>
-              <button class="lightbox-next">Next</button>
+            <div class="lightbox grey">
+              <div class="btn-previous">previous</div>
+              <div class="btn-next">next</div>
+              <div class="lightbox-close">back</div>
 
-              
+              <div class="img-container">
+                <img src="./assets/images/creations/loup_vector.png">
+              </div>
+              <div class="img-bottom">
+                <div class="img-caption">Blablalba</div>
+              </div>
             </div>
           </div>
+
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
           </div>
+
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
           </div>
+
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
           </div>
+
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
           </div>
+
           <div class="project-container">
             <div class="project-thumb"></div>
             <div class="project-caption">Caption goes here</div>
