Added icons to gallery

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             <div class="project-caption">Caption goes here</div>
 
             <div class="lightbox grey">
-              <div class="btn-previous">previous</div>
-              <div class="btn-next">next</div>
-              <div class="lightbox-close">back</div>
+              <img src="./assets/images/projects/dir_gauche.png" class="btn-previous">
+              <img src="./assets/images/projects/dir_droite.png" class="btn-next">
+              <img src="./assets/images/projects/dir_croix.png" class="lightbox-close">
 
               <div class="img-container">
                 <img src="./assets/images/creations/loup_vector.png">
