--- a/index.html
+++ b/index.html
@@ -116,14 +116,16 @@
   <section id="contact" class="full-height">
     <div class="section-anchor"></div>
     <div class="section-content">
-      <h1>Contact</h1>
-      <p>
-        Mikael Ruffieux<br>
-        Rte de Duvillard 23<br>
-        1663 Epagny<br>
-        mikael.ruffieux [at] gmail.com<br>
-        +41 79 108 66 18
-      </p>
+      <div class="information">
+        <h1>Contact</h1>
+        <p>
+          Mikael Ruffieux<br>
+          Rte de Duvillard 23<br>
+          1663 Epagny<br>
+          mikael.ruffieux [at] gmail.com<br>
+          +41 79 108 66 18
+        </p>
+      </div>
     </div>
   </section>
 
