--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
         <h1>Contact</h1>
         <p>
           Mikael Ruffieux<br>
-          Rte de Duvillard 23<br>
-          1663 Epagny<br>
-          mikael.ruffieux [at] gmail.com<br>
-          +41 79 108 66 18
+          <img src="./assets/images/contact/adress.png"> Rte de Duvillard 23, 1663 Epagny<br>
+          <img src="./assets/images/contact/mail.png"> mikael.ruffieux [at] gmail.com<br>
+          <img src="./assets/images/contact/phone.png"> +41 79 108 66 18
         </p>
       </div>
     </div>
