Added thumb with json

--- a/index.html
+++ b/index.html
@@ -62,54 +62,55 @@
       <iframe src="https://player.vimeo.com/video/214376110?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <section id="collab-projects">
-      <div class="section-content">
-        <h1>Projets</h1>
 
-        <div class="project-container-global">
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
+    <div class="lightbox grey">
+      <img src="./assets/images/projects/dir_gauche.png"
+      class="btn-previous">
+      <img src="./assets/images/projects/dir_droite.png"
+      class="btn-next">
+      <img src="./assets/images/projects/dir_croix.png"
+      class="lightbox-close">
 
-            <div class="lightbox grey">
-              <img src="./assets/images/projects/dir_gauche.png" class="btn-previous">
-              <img src="./assets/images/projects/dir_droite.png" class="btn-next">
-              <img src="./assets/images/projects/dir_croix.png" class="lightbox-close">
-
-              <div class="img-container">
-                <img src="./assets/images/creations/loup_vector.png">
-              </div>
-              <div class="img-bottom">
-                <div class="img-caption">Blablalba</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
-          </div>
-
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
-          </div>
-
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
-          </div>
-
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
-          </div>
-
-          <div class="project-container">
-            <div class="project-thumb"></div>
-            <div class="project-caption">Caption goes here</div>
-          </div>
-        </div>
+      <div class="img-container template">
+        <img src="./assets/images/creations/loup_vector.png">
       </div>
+
+      <div class="img-bottom">
+        <div class="img-caption">Blablalba</div>
+      </div>
+    </div>
+
+    <div class="section-content">
+      <h1>Projets</h1>
+
+      <div class="project-container-global">
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" src="">
+          <div class="project-caption">Caption goes here</div>
+        </div>
+
+      </div>
+    </div>
     </section>
   </section>
 
