--- a/index.html
+++ b/index.html
@@ -110,27 +110,27 @@
       <div class="project-container-global">
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Images</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Alpha Bulgaria</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Soirée Humoristique 2016</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Maxi Camp 2015</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Sites web</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Caption goes here</div>
+          <div class="project-caption">Soirée de gym 2016</div>
         </div>
 
       </div>
