--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </video>
     </div>
     <div class="content">
-      <img class="logo" src="./assets/images/home/logo_text.png">
+      <img class="logo" href="#home" src="./assets/images/home/logo_text.png">
       <img class="arrow" src="./assets/images/layout/arrowdown.png">
     </div>
   </section>
@@ -48,9 +48,9 @@
     <nav id="navbar">
       <img src="./assets/images/layout/logo_text.png">
       <ul>
-        <li>À propos</li>
-        <li>Travaux</li>
-        <li>Contact</li>
+        <li><a href="#about">À propos</a></li>
+        <li><a href="#work">Travaux</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -62,10 +62,10 @@
         Designer et réalisateur amateur et autodidacte
       </p>
       <div class="skills">
-        <img src="./assets/images/about/photoshop.png">
-        <img src="./assets/images/about/video.png">
-        <img src="./assets/images/about/clapperboard.png">
         <img src="./assets/images/about/camera.png">
+        <img src="./assets/images/about/photoshop.png">
+        <img src="./assets/images/about/clapperboard.png">
+        <img src="./assets/images/about/video.png">
       </div>
     </div>
   </section>
@@ -77,7 +77,7 @@
         <source src="./assets/videos/work.mp4" type="video/mp4">
       </video>
     </div>
-    <div class="title">
+    <div class="title" id="work">
       <h1>Travaux</h1>
     </div>
   </section>
@@ -144,8 +144,10 @@
         <h1>Contact</h1>
         <p>
           Mikael Ruffieux<br>
-          <img src="./assets/images/contact/adress.png"> Rte de Duvillard 23, 1663 Epagny<br>
-          <img src="./assets/images/contact/mail.png"> mikael.ruffieux [at] gmail.com<br>
+          <img src="./assets/images/contact/adress.png"><a href="https://www.google.ch/maps/place/Route+de+Duvillard+23,+1663+Epagny/@46.5894067,7.08065,17z/data=!3m1!4b1!4m5!3m4!1s0x478e89f27fabe553:0x20f40e4ad65f9b63!8m2!3d46.589403!4d7.0828387?hl=en">
+           Rte de Duvillard 23, 1663 Epagny</a><br>
+          <img src="./assets/images/contact/mail.png"><a href="mailto:ruffieux.mikael@gmail.com"> ruffieux.mikael [at] gmail.com</a><br>
+          <img src="./assets/images/contact/instagram.png"><a href="https://www.instagram.com/redox_mikael/"> @redox_mikael</a><br>
           <img src="./assets/images/contact/phone.png"> +41 79 108 66 18
         </p>
       </div>
