--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="project-container-global">
         <div class="project-container">
           <img class="project-thumb" src="">
-          <div class="project-caption">Images</div>
+          <div class="project-caption">Créations</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" src="">
