Added caption dynamic update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </div>
     <div class="content">
       <img class="logo" href="#home" src="./assets/images/home/logo_text.png">
-      <img class="arrow" src="./assets/images/layout/arrowdown.png">
+      <a href="#navbar">
+        <img class="arrow" src="./assets/images/layout/arrowdown.png">
+      </a>
     </div>
   </section>
 
