correction "about me"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>
         Mikael Ruffieux,<br>
         20 ans,<br>
-        Designer et réalisateur amateur et autodidacte
+        Designer autodidacte et réalisateur amateur
       </p>
       <div class="skills">
         <img src="./assets/images/about/camera.png">
