--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="2" src="">
-          <div class="project-caption">Soirée Humoristique 2016</div>
+          <div class="project-caption">Vidéos diverses</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="3" src="">
-          <div class="project-caption">Maxi Camp 2015</div>
+          <div class="project-caption">Photographies</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="4" src="">
