--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="section-content">
       <h1>À propos</h1>
       <p>
-        Mikael Ruffieux,<br>
+        Mika&#235;l Ruffieux,<br>
         21 ans,<br>
         Designer autodidacte et réalisateur amateur
       </p>
@@ -145,7 +145,7 @@
       <div class="information">
         <h1>Contact</h1>
         <p>
-          Mikael Ruffieux<br>
+          Mika&#235;l Ruffieux<br>
           <img src="./assets/images/contact/adress.png"><a target="_blank" href="https://www.google.ch/maps/place/Route+de+Duvillard+23,+1663+Epagny/@46.5894067,7.08065,17z/data=!3m1!4b1!4m5!3m4!1s0x478e89f27fabe553:0x20f40e4ad65f9b63!8m2!3d46.589403!4d7.0828387?hl=en">
            Rte de Duvillard 23, 1663 Epagny</a><br>
           <img src="./assets/images/contact/mail.png"><a href="mailto:ruffieux.mikael@gmail.com"> ruffieux.mikael [at] gmail.com</a><br>
