--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-
   <section id="home" class="full-height">
     <div class="video-background">
       <video autoplay muted loop>
@@ -37,25 +36,23 @@
       </video>
     </div>
     <div class="content">
-      <img class="logo" href="#home" src="./assets/images/home/logo_text.png">
+      <img class="logo" href="#home" src="./assets/images/home/logo_trans.png">
+      <img class="logo-text" src="./assets/images/home/redox_text.png">
       <a href="#navbar">
         <img class="arrow" src="./assets/images/layout/arrowdown.png">
       </a>
     </div>
   </section>
-
+  <nav id="navbar">
+    <ul>
+      <li><a href="#home">Accueil</a></li>
+      <li><a href="#about">À propos</a></li>
+      <li><a href="#work">Travaux</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
   <section id="about" class="full-height grey">
     <div class="section-anchor"></div>
-
-    <nav id="navbar">
-      <img src="./assets/images/layout/logo_text.png">
-      <ul>
-        <li><a href="#about">À propos</a></li>
-        <li><a href="#work">Travaux</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-
     <div class="section-content">
       <h1>À propos</h1>
       <p>
