--- a/index.html
+++ b/index.html
@@ -99,41 +99,82 @@
       </div>
 
       <div class="img-bottom">
-        <div class="img-caption">Blablalba</div>
+        <div class="img-caption">Description</div>
       </div>
     </div>
 
     <div class="section-content">
-      <h1>Projets</h1>
 
       <div class="project-container-global">
+        <h1>Videos</h1>
         <div class="project-container">
           <img class="project-thumb" data-index="0" src="">
-          <div class="project-caption">Créations</div>
+          <div class="project-caption">Bulle Box - Service de la Jeunesse, Bulle</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="1" src="">
-          <div class="project-caption">Alpha Bulgaria</div>
+          <div class="project-caption">Budapest - Sziget Festival 2017</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="2" src="">
-          <div class="project-caption">Vidéos diverses</div>
+          <div class="project-caption">Dent de Broc 2017</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="3" src="">
-          <div class="project-caption">Photographies</div>
+          <div class="project-caption">Showreel 2016</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="4" src="">
-          <div class="project-caption">Sites web</div>
+          <div class="project-caption">Soirée de gym 2016 - FSG Bulle</div>
         </div>
         <div class="project-container">
           <img class="project-thumb" data-index="5" src="">
-          <div class="project-caption">Soirée de gym 2016</div>
+          <div class="project-caption">Alpha Youth Training</div>
         </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="6" src="">
+          <div class="project-caption">Alpha Story - Christo </div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="7" src="">
+          <div class="project-caption">Soirée humoristique 2016 - Collège du Sud</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="8" src="">
+          <div class="project-caption">Maxi Camp 2015</div>
+        </div>
+        <br>
+
+
+        <h1>Web Design</h1>
+        <div class="project-container">
+          <img class="project-thumb" data-index="9" src="">
+          <div class="project-caption">Bulle Box - Service de la Jeunesse, Bulle</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="10" src="">
+          <div class="project-caption">Promyana, Alpha Bulgaria</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="11" src="">
+          <div class="project-caption">Stiftung Mehrwert</div>
+        </div>
+        <br>
+
+        <h1>Images</h1>
+        <div class="project-container">
+          <img class="project-thumb" data-index="12" src="">
+          <div class="project-caption">Photographies</div>
+        </div>
+        <div class="project-container">
+          <img class="project-thumb" data-index="13" src="">
+          <div class="project-caption">Créations graphiques</div>
+        </div>
+
 
       </div>
     </div>
+  
   </section>
 
   <section id="contact" class="full-height">
@@ -145,7 +186,7 @@
           Mika&#235;l Ruffieux<br>
           <img src="./assets/images/contact/adress.png"><a target="_blank" href="https://www.google.ch/maps/place/Route+de+Duvillard+23,+1663+Epagny/@46.5894067,7.08065,17z/data=!3m1!4b1!4m5!3m4!1s0x478e89f27fabe553:0x20f40e4ad65f9b63!8m2!3d46.589403!4d7.0828387?hl=en">
            Rte de Duvillard 23, 1663 Epagny</a><br>
-          <img src="./assets/images/contact/mail.png"><a href="mailto:ruffieux.mikael@gmail.com"> ruffieux.mikael [at] gmail.com</a><br>
+          <img src="./assets/images/contact/mail.png"><a href="mailto:ruffieux.mikael@gmail.com"> ruffieux.mikael@gmail.com</a><br>
           <img src="./assets/images/contact/instagram.png"><a target="_blank" href="https://www.instagram.com/redox_mikael/"> @redox_mikael</a><br>
           <img src="./assets/images/contact/phone.png"> +41 79 108 66 18
         </p>
