--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/application.css">
+
+  <link rel="stylesheet" type="text/css" href="./assets/fancybox-master/dist/jquery.fancybox.min.css">
+
   <meta charset="utf-8">
   <script type="text/javascript" src="./assets/javascripts/projects.js"></script>
+
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="./assets/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/favicon/apple-icon-60x60.png">
@@ -81,100 +87,133 @@
     </div>
   </section>
 
-  <section id="projects" class="grey">
+  <section id="projects" class="grey" >
     <div class="showreel section-content">
       <iframe src="https://player.vimeo.com/video/214376110?portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
+    <!-- TEST -->
+  <section id="galleries" style="width:1000px;margin-left:auto;margin-right:auto;">
+    <h1 style="text-align:right">VIDS</h1>
+    <table>
+      <tr>
+        <td>
+          <a data-fancybox href="https://vimeo.com/266120847">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Bulle Box - Service de la Jeunesse</p>
+          </a>
 
-    <div class="lightbox grey">
-      <img src="./assets/images/projects/dir_gauche.png"
-      class="btn-previous">
-      <img src="./assets/images/projects/dir_droite.png"
-      class="btn-next">
-      <img src="./assets/images/projects/dir_croix.png"
-      class="lightbox-close">
+        </td>
 
-      <div class="img-container">
-        <img src="">
-      </div>
+        <td>
+          <a data-fancybox href="https://vimeo.com/247694127">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Sziget Festival 2017 - Budapest</p>
+          </a>
+        </td>
 
-      <div class="img-bottom">
-        <div class="img-caption">Description</div>
-      </div>
-    </div>
+        <td>
+          <a data-fancybox href="https://vimeo.com/220195324">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Dent de Broc 2017</p>
+          </a>
+        </td>
+      </tr>
 
-    <div class="section-content">
+      <tr>
+        <td>
+          <a data-fancybox href="https://vimeo.com/214376110">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Showreel 2016</p>
+          </a>
+        </td>
 
-      <div class="project-container-global">
-        <h1>Videos</h1>
-        <div class="project-container">
-          <img class="project-thumb" data-index="0" src="">
-          <div class="project-caption">Bulle Box - Service de la Jeunesse, Bulle</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="1" src="">
-          <div class="project-caption">Budapest - Sziget Festival 2017</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="2" src="">
-          <div class="project-caption">Dent de Broc 2017</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="3" src="">
-          <div class="project-caption">Showreel 2016</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="4" src="">
-          <div class="project-caption">Soirée de gym 2016 - FSG Bulle</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="5" src="">
-          <div class="project-caption">Alpha Youth Training</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="6" src="">
-          <div class="project-caption">Alpha Story - Christo </div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="7" src="">
-          <div class="project-caption">Soirée humoristique 2016 - Collège du Sud</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="8" src="">
-          <div class="project-caption">Maxi Camp 2015</div>
-        </div>
-        <br>
+        <td>
+          <a data-fancybox href="https://vimeo.com/214411319">
+            <img src="assets/images/projects/min_gym.png">
+            <p>Soirée de gym 2016 - FSG Bulle</p>
+          </a>
+        </td>
+
+        <td>
+          <a data-fancybox href="https://www.youtube.com/watch?v=AkiyKayBtD0">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Alpha Youth Training 2016</p>
+          </a>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <a data-fancybox href="https://www.youtube.com/watch?v=iw9aRkh6fGE">
+            <img src="assets/images/projects/min_alphastory.png">
+            <p>Alpha Story - Christo</p>
+          </a>
+        </td>
+
+        <td>
+          <a data-fancybox href="https://www.youtube.com/watch?v=4gGOsYrpLY4">
+            <img src="assets/images/projects/min_SH.png">
+            <p>Soirée humoristique 2016 - CSud</p>
+          </a>
+        </td>
+
+        <td>
+          <a data-fancybox href="https://www.youtube.com/watch?v=w0GQ2Vjvtyc" data-caption="Description">
+            <img src="assets/images/projects/min_maxicamp.png">
+            <p>Maxi Camp 2015</p>
+          </a>
+        </td>
+      </tr>
+    </table>
+
+    <h1>WEB</h1>
+    <table>
+      <tr>
+        <td>
+          <a href="./assets/images/screenshots/promyana.png" data-fancybox data-caption="Adresse de la page : http://centranim.ch/bullebox/order.html">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Formulaire de commande - Bulle Box</p>
+          </a>
+        </td>
+
+        <td>
+          <a href="./assets/images/screenshots/promyana.png" data-fancybox data-caption="Adresse du site : http://promyana.org/">
+            <img src="assets/images/projects/min_promyana.png">
+            <p>promyana.org</p>
+          </a>
+        </td>
+
+        <td>
+          <a href="./assets/images/screenshots/stiftung-mehrwert.png" data-fancybox data-caption="Adresse du site : http://stiftung-mehrwert.ch">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>stiftung-mehrwert.ch</p>
+          </a>
+        </td>
+      </tr>
+    </table>
 
 
-        <h1>Web Design</h1>
-        <div class="project-container">
-          <img class="project-thumb" data-index="9" src="">
-          <div class="project-caption">Bulle Box - Service de la Jeunesse, Bulle</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="10" src="">
-          <div class="project-caption">Promyana, Alpha Bulgaria</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="11" src="">
-          <div class="project-caption">Stiftung Mehrwert</div>
-        </div>
-        <br>
+    <h1 style="text-align:right">PICS</h1>
+    <table>
+      <tr>
+        <td>
+          <a href="./gallery1.html">
+            <img src="assets/images/projects/min_photo.jpg">
+            <p>Photographies</p>
+          </a>
+        </td>
 
-        <h1>Images</h1>
-        <div class="project-container">
-          <img class="project-thumb" data-index="12" src="">
-          <div class="project-caption">Photographies</div>
-        </div>
-        <div class="project-container">
-          <img class="project-thumb" data-index="13" src="">
-          <div class="project-caption">Créations graphiques</div>
-        </div>
+        <td>
+          <a href="./gallery2.html">
+            <img src="assets/images/projects/min_r2d2.png">
+            <p>Créations graphiques</p>
+          </a>
+        </td>
+      </tr>
+    </table>
+  </section>
 
-
-      </div>
-    </div>
-  
+    <!-- FIN DE TEST -->
   </section>
 
   <section id="contact" class="full-height">
